# langGraphLearn

./: .env.example  README.md  checkpoints.sqlite  langgraph_advanced_tutorial.md  langgraph_tutorial.md  main.py  pyproject.toml  requirements.txt
plan/: detailed_learning_outline.md  index.md  learning_plan.md  phase1_1_lcel_vs_langgraph.md  phase1_2_1_state_deep_dive.md  phase1_2_2_nodes_deep_dive.md  phase1_2_3_edges_deep_dive.md  phase1_2_state_driven_architecture.md  phase1_3_1_project_simple_chatbot.md  phase2_4_1_building_loops.md  phase2_4_2_avoiding_infinite_loops.md  phase2_5_1_state_accumulation.md  phase2_5_2_annotated_deep_dive.md  phase2_6_1_project_ollama_agent.md  phase3_7_1_checkpointing_concepts.md  phase3_7_2_thread_id_concepts.md  phase3_8_1_human_in_the_loop_concepts.md  phase3_8_2_human_in_the_loop_mechanics.md  phase3_9_1_project_agent_with_confirmation.md  phase4_10_1_langsmith_concepts.md  phase4_10_2_interpreting_traces.md  phase4_11_1_project_langsmith_integration.md  popular_tools_and_integrations.md  python_for_langgraph.md
src/: phase1_simple_chatbot.py  phase2_tool_agent.py  phase3_human_in_the_loop.py  phase4_langsmith_integration.py
src/chat/: README.md  app.py  main.py
tests/: conftest.py  test_chat_app.py
